<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dialog_ok">@android:string/ok</string>
    <string name="dialog_no">No</string>
    <string name="error">Error</string>
    <string name="unknown_error_message">The app is unable to connect to the API server. Please retry. If the issue persists, contact the support center.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_retry">Retry</string>
    <string name="df_no_network_connection_tv_msg">No network connection\nPlease try again</string>

    <string name="lbl_close">Close</string>

    <string name="lbl_let_chat">Let’s Chat</string>
    <string name="lbl_the_team_typically_replies_in">The team typically replies %s</string>
    <string name="lbl_made_with">Made with</string>
    <string name="lbl_by_salesmate">by Salesmate</string>
    <string name="lbl_start_new_chat">Start New Chat</string>
    <string name="lbl_recent_chats">Recent Chats</string>
    <string name="lbl_view_all">View all</string>
    <string name="lbl_your_conversations">Your Conversations</string>

    <string name="lbl_we_reply">We reply %s</string>
    <string name="lbl_more">More</string>
    <string name="lbl_start_typing">Start typing…</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_sending">Sending…</string>
    <string name="lbl_failed">Failed</string>
    <string name="lbl_try_again">Try Again</string>
    <string name="msg_send_failed_message">Your message was not sent. Tap try again to send this message.</string>

    <string name="title_permission_denied">Permission Denied</string>
    <string name="msg_storage_permission">STORAGE permission is revoked its required to download the file please enable it from settings.</string>
    <string name="msg_camera_permission">Camera permission is required to take photo</string>
    <string name="lbl_goto_settings">GO TO SETTINGS</string>
    <string name="lbl_upload_from_gallery">Upload from gallery</string>
    <string name="lbl_capture_from_camera">Capture from camera</string>
    <string name="msg_support_file_sizes_upto_25mb">We support file sizes up to 25MB. If your file is larger than 25MB, we suggest you break it up into multiple files.</string>
    <string name="lbl_rate_your_conversation">Rate Your Conversation</string>
    <string name="lbl_share_your_feedback_optional">Share your feedback (optional)</string>
    <string name="lbl_get_notified">Get notified</string>
    <string name="lbl_enter_name">Enter name</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="hint_enter_email_address">Enter email address</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_that_email_doesn_t_look_quite_right">That email doesn\'t look quite right.</string>
    <string name="lbl_you_will_be_notified_on_the_below_email">You will be notified on the below email</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_not_seen_yet">Not seen yet</string>
    <string name="lbl_seen">Seen</string>
    <string name="msg_this_conversation_is_closed">This conversation is closed</string>
    <string name="msg_gif_not_support">Currently GIF is not supported, but no worries we will be supporting it soon.</string>
    <string name="msg_file_extension_isnt_allowed">This file extension isn\'t allowed</string>

    <string name="file_download_message">Downloading %1$s</string>
</resources>