<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/default_background_color"
    android:animateLayoutChanges="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:expanded="false"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:toolbarId="@+id/toolbar">

                <include
                    android:id="@+id/incChatTopLogoView"
                    layout="@layout/v_chat_top_logo_view" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    tools:layout_height="56dp"
                    app:layout_collapseMode="pin"
                    app:contentInsetStartWithNavigation="0dp"
                    android:layout_height="?attr/actionBarSize">

                    <include
                        android:id="@+id/incChatToolbarView"
                        layout="@layout/v_chat_toolbar_view" />

                    <include
                        android:id="@+id/incChatUserToolbarView"
                        layout="@layout/v_chat_user_toolbar_view" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llMessage"
            tools:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/drw_corner_top_background_white"
            tools:listitem="@layout/r_outgoing_message" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/incTypingMessage"
        layout="@layout/v_typing_message" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />


    <LinearLayout
        android:id="@+id/llMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_large"
            android:paddingVertical="@dimen/padding_small1"
            android:hint="@string/lbl_start_typing"
            android:background="@null"
            android:inputType="text|textCapSentences|textMultiLine"
            android:maxLines="2"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/text_black"
            android:textColorHint="@color/hint_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_small1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgAttachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_attachment"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/padding_small" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <com.rapidops.salesmatechatsdk.app.view.AppTextView
                android:id="@+id/txtSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small1"
                style="@style/TextMedium"
                android:layout_gravity="center"
                android:textColor="@color/color_send"
                android:enabled="false"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:text="@string/lbl_send" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAskEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="@dimen/padding_large">

        <include
            android:id="@+id/incEmailAsked"
            layout="@layout/v_email_asked" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llConversationClosed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="@dimen/padding_small1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:textSize="@dimen/font_size_small"
            android:text="@string/msg_this_conversation_is_closed" />

        <com.rapidops.salesmatechatsdk.app.view.AppTextView
            android:id="@+id/txtStartNewChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_send"
            android:background="@drawable/drw_corner_background"
            android:paddingHorizontal="@dimen/padding_xxxlarge"
            android:paddingVertical="@dimen/padding_small3"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/TextMedium"
            app:textColorStyle="actionForegroundColor"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/padding_small1"
            android:textSize="@dimen/font_size_medium"
            android:text="@string/lbl_start_new_chat" />

    </LinearLayout>

</LinearLayout>